<resources>
    <string name="app_name">Covid19India</string>
    <string name="ind_covid_tracker">INDIA COVID-19 TRACKER</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="active">ACTIVE</string>
    <string name="recovered">RECOVERED</string>
    <string name="recommend_app">We recommend Aarogya Setu app to fight against COVID19. Please download and share it using this link Android : </string>
    <string name="arogya_setu"><u>Aarogya Setu</u></string>
    <string name="confirmed_colon">CONFIRMED : </string>
    <string name="active_colon">ACTIVE : </string>
    <string name="recovered_colon">RECOVERED : </string>
    <string name="about_info">This is not official Data.We are using state bulletins and official handles to update our numbers. The data is validated by a group of volunteers and published into a Google sheet and an API. API is available for all at api.covid19india.org. The source list is <a href="https://telegra.ph/Covid-19-Sources-03-19">here</a>.</string>
</resources>
